# wedding-app-fe

./: .gitignore  Dockerfile  README.md  docker-compose.db.yaml  init.sql  pyproject.toml
src/: __main__.py
src/modules/guests/domain/: guest.py  repository.py  service.py
src/modules/itinerary/domain/: itinerary.py  itinerary_repo.py  itinerary_service.py
src/modules/users/domain/: password_service.py  token_service.py  user_model.py  user_repository.py  user_service.py
src/shared/: __app_configs.py  __exceptions.py  __settings.py
src/shared/DIContainer/: container.py  registered_services.py
src/shared/DIContaner/: container.py
src/shared/auth/: authenticate.py  email_authentication.py
src/shared/auth/dependencies/: __init__.py  admin.py  token.py  user.py
src/shared/auth/models/: logged_user.py
src/shared/controllers/admin/: add_guests.py  update_itinerary.py
src/shared/controllers/itinerary/: get_elements.py
src/shared/controllers/rsvp/: form_input.py  search.py
src/shared/database/: config.py  init.py
src/shared/database/models/: __init__.py  base.py  base_model.py  guest.py  user.py
src/shared/routers/: __init__.py  health.py  home.py  itinerary.py  location.py  login.py  routes.py  rsvp.py  test_db.py  users.py
src/shared/server/: app.py  config.py
src/shared/templates/: 404.html  admin_dashboard.html  base.html  home.html  location.html  login.html  paths.py  plan-wesela.html  rsvp.html  rsvp_completed.html  rsvp_search.html  rsvp_single.html  rsvp_submitted.html
src/shared/utils/: __validations.py  enums.py  logger.py
(+39 files in other folders)
