[project]
name = "wedding-app-fe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukasz Ch", email = "lukchm94@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.2",
    "click>=8.1.7",
    "pydantic-settings>=2.2.1",
]
requires-python = ">=3.13"

readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python src --port 8000 --reload"
